--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8"/>
     <title>Sam Hinkie</title>
-    <link rel="stylesheet" href="css/tufte.css">
-    <link rel="stylesheet" href="css/latex.css">
+    <link rel="stylesheet" href="./css/tufte.css">
+    <link rel="stylesheet" href="./css/latex.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/solid.css" integrity="sha384-wnAC7ln+XN0UKdcPvJvtqIH3jOjs9pnKnq9qX68ImXvOGz2JuFoEiCjT8jyZQX2z" crossorigin="anonymous">
        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/fontawesome.css" integrity="sha384-HbmWTHay9psM8qyzEKPc8odH4DsOuzdejtnr+OFtDmOcIVnhgReQ4GZBH7uwcjf6" crossorigin="anonymous">
@@ -16,7 +16,7 @@
   </head>
     <body>
     <article>
-      <h1>Welcome</h1>
+      <h1>Welcome12</h1>
       <section class="change-width" style="background-color:inherit; height:150px; padding-top: 5px; padding-bottom: 5px; border-bottom-style: solid; border-bottom-width:.1rem; border-bottom-color: #262626;">
         <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="#" title="LandlineSports">
           <img style="display:flex; justify-content:center; max-height:150px; max-width:150px;" src="<?php echo get_bloginfo('template_directory'); ?>/images/Landline01.jpg" alt="Landline Sports">
