--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <p><span class="newthought">Instant editors.</span> Think Google Maps, but for basketball video.<label for="sn-google-maps" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-google-maps" class="margin-toggle"/><span class="sidenote" style="font-family: 'Open Sans',sans-serif; font-weight:300;">“Read <a href="https://www.justinobeirne.com/google-maps-moat"> Google Maps's Moat</a> for a directional idea of what's possible.</span> Searchable at any scale. Tags from various data sources as APIs in, all mapping to specific frames in the video. Example: auto-query every dunk from every game on YouTube played yesterday in 2.5-second clips ordered by loudest ovation to quietest. That's a start.</p>
         <p><span class="newthought">Slider bars for auto compression.</span> Drag&nbsp; <font color="7BAFD4"><span class="fas fa-sliders-h"></span></font>&nbsp; to choose your time allocation, then fill in the most important content within that constraint. It would be choppy and imperfect. And full of signal.
-          <br>&nbsp;&nbsp;&#8212; <em>NBA game</em> | 1 minute to 150 minutes<label for="sn-compress-nba-game" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-compress-nba-game" class="margin-toggle"/>
+          <br>&nbsp;&nbsp;&#8212; <em>NBA game</em> | 1 minute to 150 minutes
           <br>&nbsp;&nbsp;&#8212; <em>book</em> | 1 page to 1,000 pages
           <br>&nbsp;&nbsp;&#8212; <em>article</em> | 1 paragraph to 100 paragraphs
         </p>
