--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
          <section style="padding-top:.5rem; padding-bottom:0;">
           <footer class="change-width">
            <div style="display:flex; justify-content:center">        
-            <li style="display:block; margin:0px;""><a id="envelope" href="#" class="fa fa-envelope" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
-            <li style="display:block; margin:0px;""><a id="facebook" href="#" class="fa fa-facebook" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="envelope" href="#" class="fa fa-envelope" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="facebook" href="#" class="fa fa-facebook" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
             <li style="display:block; margin:0px;"><a id="twitter" href="#" class="fa fa-twitter" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
             <li style="display:block; margin:0px;"><a id="instagram" href="#" class="fa fa-instagram" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
             <li style="display:block; margin:0px;"><a id="reddit" href="#" class="fa fa-reddit" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
