Updated Header CSS
Updated h1, h2, h3, and h4, as well as changed p bottom margin and index file.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
           <img style="display:flex; justify-content:center; max-height:150px; max-width:150px;" src="<?php echo get_bloginfo('template_directory'); ?>/images/Landline01.jpg" alt="Landline Sports">
         </a>
       </section>
+<!-- BEGIN: Post Title -->
       <section id="post-header" class="change-width-post">
-        <h1 id="post-tite" style="font-family:'Playfair Display', serif; font-size: 28px; font-weight:600;">Working Title of Post That Might Be Long</h1>
-        <h2 id="post-author" style="color:black; font-family: 'Open Sans', sans-serif;; font-weight:400; font-size:16px;"><span style="font-weight:300; font-size: 12px; font-style:italic">by </span>Matt Coleman<span id="date"> | Friday, March 6, 2019</span></h2>
-        <h4 id="subtitle" style="font-family: 'Open Sans', sans-serif;, sans-serif; font-size: 18px; font-weight:300; color: black;"><span id="highlight">Because the world is a dangerous place and this is making everyone scared going into the next generation...</h4>
+        <h1>Working Title of Post That Might Be Long</h1>
+        <h2 id="post-author"><span id="by" style="font-weight:300; font-size: 12px; font-style:italic">by </span>Matt Coleman<span id="date"> | Friday, March 6, 2019</span></h2>
+        <h4 id="subtitle"><span id="highlight">Because the world is a dangerous place and this is making everyone scared going into the next generation...</h4>
       </section>
+<!-- END: Post Title -->
+<!-- BEGIN: Post Body -->
       <section>
         <div class="topborder"></div>
       </section>
@@ -51,6 +54,7 @@
 
       </section>
      </div>
+<!-- End: Post Body -->
 <!-- BEGIN: Email sign up box -->
            <section>
             <form class="change-width" style="padding-top:10px; padding-bottom: 10px; display:flex; align-content:center; justify-content: center; background-color: #F5F5F5; border-bottom-style: solid; border-bottom-width:thin; border-bottom-color: #DCDCDC; border-top-style: solid; border-top-width:thin; border-top-color: #DCDCDC;">
