Added Image and Image Section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body>
     <article>
       <section class="change-width" style="background-color:inherit; height:150px; padding-top: 5px; padding-bottom: 5px; border-bottom-style: solid; border-bottom-width:.1rem; border-bottom-color: #262626;">
-        <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="#" title="LandlineSports">
-          <img style="display:flex; justify-content:center; max-height:150px; max-width:150px;" src="<?php echo get_bloginfo('template_directory'); ?>/images/Landline01.jpg" alt="Landline Sports">
+        <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="./index.asp" title="Matt Coleman">
+          <img style="display:flex; justify-content:center; max-height:150px; max-width:150px;" src="./images/matt_coleman.jpg" alt="mattcoleman.net">
         </a>
       </section>
 <!-- BEGIN: Post Title -->
