Made quite a few changes, and built the "Follow" page

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 <!-- End: Post Body -->
 <!-- BEGIN: Email sign up box -->
            <section>
-            <form class="change-width" style="padding-top:10px; padding-bottom: 10px; display:flex; align-content:center; justify-content: center; background-color: #F5F5F5; border-bottom-style: solid; border-bottom-width:thin; border-bottom-color: #DCDCDC; border-top-style: solid; border-top-width:thin; border-top-color: #DCDCDC;">
+            <form class="change-width" style="padding-top:10px; padding-bottom: 10px; display:flex; align-content:center; justify-content: center; background-color: #F5F5F5; border-bottom-style: solid; border-bottom-width:thin; border-bottom-color: #DCDCDC; border-top-style: solid; border-top-width:thin; border-top-color: #DCDCDC;" action="https://landlinesports.us12.list-manage.com/subscribe/post?u=f3b446f20e468c6036cd09ed6&amp;id=5630b9752a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
              <div style="padding:1rem">
               <span>
-               <p style="justify-content: center; display:flex; margin:0px; font-size: 14px; font-weight: 600;">Want the Landline Sports newsletter?</p>
+               <label for="mce-EMAIL" style="justify-content: center; display:flex; margin:0px; font-size: 14px; font-weight: 600;">Want to receive Matt's newsletter?</label>
               </span>
               <span style="justify-content: center; display:flex; padding-top:.5rem; padding-bottom:.75rem;">
-               <input type="text" placeholder="Your email address" style="width:250px; text-align:center; background-color:#F5F5F5; padding-bottom: 5px; border: none; border-bottom: solid 1px #262626">
+               <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email address" required style="width:250px; text-align:center; background-color:#F5F5F5; padding-bottom: 5px; border: none; border-bottom: solid 1px #262626">
               </span>
               <span style="justify-content: center; display:flex;">
-                <button id="submit-button" type="submit">Subscribe</button>
+                <button id="submit-button" value="Subscribe" id="mc-embedded-subscribe" type="submit">Subscribe</button>
               </span>
             </div>
           </form>
