--- a/follow.html
+++ b/follow.html
@@ -1,1 +1,64 @@
-<h2>Receive the weekly newsletter by signing up below</h2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <title>Matt Coleman: Home</title>
+    <link rel="stylesheet" href="./css/tufte.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/solid.css" integrity="sha384-wnAC7ln+XN0UKdcPvJvtqIH3jOjs9pnKnq9qX68ImXvOGz2JuFoEiCjT8jyZQX2z" crossorigin="anonymous">
+       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/fontawesome.css" integrity="sha384-HbmWTHay9psM8qyzEKPc8odH4DsOuzdejtnr+OFtDmOcIVnhgReQ4GZBH7uwcjf6" crossorigin="anonymous">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
+       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+  </head>
+  <body>
+    <!-- BEGIN: Nav -->
+    <section class="change-width" style="padding:0px; border-bottom:solid .1rem #262626;">
+      <div style="background-color: inherit; padding-top:5px; padding-bottom:5px; justify-content:left; display:block; font-family:'Open Sans', sans-serif; font-size: 14px;">
+        <ul style="display:flex;padding:0px; font-size:14px;margin:0px;">
+          <li style="display:block; margin-top: 0px; flex:1;"><a href="./index.html" style="background-repeat:no-repeat; font-weight:500; text-shadow:none;">mattcoleman.net</a></li>
+          <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index.html">Home</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./index.html">Follow</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./index.html">About</a></li>
+        </ul>
+      </div>
+    </section>
+    <!-- END: Nav -->
+    <!-- BEGIN: Image -->
+      <section class="change-width" style="margin-top: 125px; background-color:inherit; height:125px; padding:0px">
+        <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="./index.html" title="Matt Coleman">
+          <img style="display:flex; justify-content:center; max-height:125px; max-width:125px;" src="./images/matt_coleman.jpg" alt="mattcoleman.net">
+        </a>
+      </section>
+    <!-- END: Image -->
+    <!-- BEGIN: Email sign up box -->
+      <section style="padding-bottom:0px; padding-left:0px; padding-right:0px; padding-top:0px; margin-bottom:400px">
+        <form class="change-width" style="display:flex; align-content:center; justify-content: center;" action="https://landlinesports.us12.list-manage.com/subscribe/post?u=f3b446f20e468c6036cd09ed6&amp;id=5630b9752a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div style="padding:1rem;  background-color: #F5F5F5; padding:50px;">
+            <span>
+              <label for="mce-EMAIL" style="justify-content: center; display:flex; margin:0px; font-size: 14px; font-weight: 600; padding-top:25px">Want to receive Matt's newsletter?</label>
+            </span>
+            <span style="justify-content: center; display:flex; padding-top:.5rem; padding-bottom:.75rem;">
+              <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email address" required style="width:250px; text-align:center; background-color:#F5F5F5; padding-bottom: 5px; border: none; border-bottom: solid 1px #262626">
+            </span>
+            <span style="justify-content: center; display:flex; padding-bottom:25px">
+              <button id="submit-button" value="Subscribe" id="mc-embedded-subscribe" type="submit">Subscribe</button>
+            </span>
+          </div>
+        </form>
+      </section>
+    <!-- END: Email sign up box -->
+    <!-- BEGIN: Footer -->
+         <section style="padding-top:.5rem; padding-bottom:0;">
+          <footer class="change-width">
+           <div style="display:flex; justify-content:center">        
+            <li style="display:block; margin:0px;"><a id="envelope" href="mailto:mjcoleman32@gmail.com?Subject=Reaching%20Out" target="_top" class="fa fa-envelope" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="facebook" href="#" class="fa fa-facebook" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="twitter" href="#" class="fa fa-twitter" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="instagram" href="#" class="fa fa-instagram" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="reddit" href="#" class="fa fa-reddit" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+          </div>
+        </footer>
+      </section>
+    <!-- END: Footer -->
+  </body>
+</html>
