Made Changes and Added an Icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Matt Coleman: Home</title>
+    <link rel="icon" href="./images/matt-coleman-icon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/tufte.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/solid.css" integrity="sha384-wnAC7ln+XN0UKdcPvJvtqIH3jOjs9pnKnq9qX68ImXvOGz2JuFoEiCjT8jyZQX2z" crossorigin="anonymous">
@@ -18,8 +19,8 @@
         <ul style="display:flex;padding:0px; font-size:14px;margin:0px;">
           <li style="display:block; margin-top: 0px; flex:1;"><a href="./index.html" style="background-repeat:no-repeat; font-weight:500; text-shadow:none;">mattcoleman.net</a></li>
           <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index.html">Home</a></li>
-          <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./index.html">Follow</a></li>
-          <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./index.html">About</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./follow.html">Follow</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./about.html">About</a></li>
         </ul>
       </div>
     </section>
@@ -90,10 +91,8 @@
           <footer class="change-width">
            <div style="display:flex; justify-content:center">        
             <li style="display:block; margin:0px;"><a id="envelope" href="mailto:mjcoleman32@gmail.com?Subject=Reaching%20Out" target="_top" class="fa fa-envelope" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
-            <li style="display:block; margin:0px;"><a id="facebook" href="#" class="fa fa-facebook" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
-            <li style="display:block; margin:0px;"><a id="twitter" href="#" class="fa fa-twitter" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
-            <li style="display:block; margin:0px;"><a id="instagram" href="#" class="fa fa-instagram" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
-            <li style="display:block; margin:0px;"><a id="reddit" href="#" class="fa fa-reddit" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="twitter" href="ttps://twitter.com/mattkingcole32" class="fa fa-twitter" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="linkedin" href="https://www.linkedin.com/in/matt-coleman/" class="fa fa-linkedin" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
           </div>
         </footer>
       </section>
