--- a/follow.html
+++ b/follow.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Matt Coleman: Home</title>
+    <title>Matt Coleman: Follow</title>
+    <link rel="icon" href="./images/matt-coleman-icon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/tufte.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/solid.css" integrity="sha384-wnAC7ln+XN0UKdcPvJvtqIH3jOjs9pnKnq9qX68ImXvOGz2JuFoEiCjT8jyZQX2z" crossorigin="anonymous">
@@ -11,14 +12,15 @@
        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   </head>
   <body>
+  <article>
     <!-- BEGIN: Nav -->
     <section class="change-width" style="padding:0px; border-bottom:solid .1rem #262626;">
       <div style="background-color: inherit; padding-top:5px; padding-bottom:5px; justify-content:left; display:block; font-family:'Open Sans', sans-serif; font-size: 14px;">
         <ul style="display:flex;padding:0px; font-size:14px;margin:0px;">
           <li style="display:block; margin-top: 0px; flex:1;"><a href="./index.html" style="background-repeat:no-repeat; font-weight:500; text-shadow:none;">mattcoleman.net</a></li>
           <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index.html">Home</a></li>
-          <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./index.html">Follow</a></li>
-          <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./index.html">About</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./follow.html">Follow</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./about.html">About</a></li>
         </ul>
       </div>
     </section>
@@ -50,15 +52,14 @@
     <!-- BEGIN: Footer -->
          <section style="padding-top:.5rem; padding-bottom:0;">
           <footer class="change-width">
-           <div style="display:flex; justify-content:center">        
+           <div style="display:flex; justify-content:center;">        
             <li style="display:block; margin:0px;"><a id="envelope" href="mailto:mjcoleman32@gmail.com?Subject=Reaching%20Out" target="_top" class="fa fa-envelope" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
-            <li style="display:block; margin:0px;"><a id="facebook" href="#" class="fa fa-facebook" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
-            <li style="display:block; margin:0px;"><a id="twitter" href="#" class="fa fa-twitter" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
-            <li style="display:block; margin:0px;"><a id="instagram" href="#" class="fa fa-instagram" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
-            <li style="display:block; margin:0px;"><a id="reddit" href="#" class="fa fa-reddit" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="twitter" href="ttps://twitter.com/mattkingcole32" class="fa fa-twitter" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
+            <li style="display:block; margin:0px;"><a id="linkedin" href="https://www.linkedin.com/in/matt-coleman/" class="fa fa-linkedin" style="background-repeat:no-repeat; font-size:15px; text-shadow:none; width:15px; margin:4px;"></a></li>
           </div>
         </footer>
       </section>
     <!-- END: Footer -->
+  </article>
   </body>
 </html>
