Made additional changes

--- a/follow.html
+++ b/follow.html
@@ -26,7 +26,7 @@
     </section>
     <!-- END: Nav -->
     <!-- BEGIN: Image -->
-      <section class="change-width" style="margin-top: 125px; background-color:inherit; height:125px; padding:0px">
+      <section class="change-width" style="margin-top: 125px; background-color:inherit; height:125px; padding:0px;">
         <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="./index.html" title="Matt Coleman">
           <img style="display:flex; justify-content:center; max-height:125px; max-width:125px;" src="./images/matt_coleman.jpg" alt="mattcoleman.net">
         </a>
@@ -35,7 +35,7 @@
     <!-- BEGIN: Email sign up box -->
       <section style="padding-bottom:0px; padding-left:0px; padding-right:0px; padding-top:0px; margin-bottom:400px">
         <form class="change-width" style="display:flex; align-content:center; justify-content: center;" action="https://landlinesports.us12.list-manage.com/subscribe/post?u=f3b446f20e468c6036cd09ed6&amp;id=5630b9752a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div style="padding:1rem;  background-color: #F5F5F5; padding:50px;">
+          <div style="padding:1rem;  background-color: #F5F5F5; padding:50px; border-radius: 10px;">
             <span>
               <label for="mce-EMAIL" style="justify-content: center; display:flex; margin:0px; font-size: 14px; font-weight: 600; padding-top:25px">Want to receive Matt's newsletter?</label>
             </span>
