--- a/about.html
+++ b/about.html
@@ -18,16 +18,16 @@
       <div style="background-color: inherit; padding-top:5px; padding-bottom:5px; justify-content:left; display:block; font-family:'Open Sans', sans-serif; font-size: 14px;">
         <ul style="display:flex;padding:0px; font-size:14px;margin:0px;">
           <li style="display:block; margin-top: 0px; flex:1;"><a href="./index.html" style="background-repeat:no-repeat; font-weight:500; text-shadow:none;">mattcoleman.net</a></li>
-          <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index.html">Home</a></li>
-          <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./follow.html">Follow</a></li>
-          <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./about.html">About</a></li>
+          <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index">Home</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./follow">Follow</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./about">About</a></li>
         </ul>
       </div>
     </section>
 <!-- END: Nav -->
 <!-- BEGIN: Image -->
       <section class="change-width" style="background-color:inherit; height:150px; padding-top: 5px; padding-bottom: 5px; border-bottom-style: solid; border-bottom-width:.1rem; border-bottom-color: #262626;">
-        <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="./index.html" title="Matt Coleman">
+        <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="./index" title="Matt Coleman">
           <img style="display:flex; justify-content:center; max-height:150px; max-width:150px;" src="./images/matt_coleman.jpg" alt="mattcoleman.net">
         </a>
       </section>
@@ -40,7 +40,7 @@
 <!-- BEGIN: Post Body -->
       <section>
         <div class="rightborder">
-        		<p>My name is a Matt Coleman, a native of southern California and current resident of San Francisco. This iteration of my website is a third or fourth renditon, as I'm trying to create a site that 1) fits my picky needs of it looking and acting how I want and 2) allows me to easily post my writing so my friends and family members to routinely visit. For those of you who visit <a href="http://www.theringer.com" title="The Ringer"> The Ringer</a>, <a href="http://www.theathletic.com" title="The Athletic">The Athletic</a>, and <a href="http://www.barstoolsports.com" title="Barstool Sports">Barstool Sports</a>, you'll see their influences throughout the site.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">Also, the inspiration for the sidenotes stems from my fascination of <a href="https://www.grantland.com" title="Grantland">Grantland</a>&#8212;which regularly used sidenotes throughout all of its posts. (RIP, Grantland)</span></p>
+        		<p>My name is a Matt Coleman. I'm originally from southern California and currently reside in San Francisco. This is my personal website, which I plan on using to write about and track my ideas and opinions pertaining to sports and business, especially when these two topics intersect. I started this to create something that is my own but, more importantly, to document these ideas so others&#8212;primarily my friends and family&#8212;can interact and respond. <span id="highlight">Personally, I believe the best way to build credibility in any field, whether in poltics, business, or entertainment, is by writing and sharing your ideas with other&#8212;so here is my attempt.</span> For those who visit <a href="http://www.theringer.com" title="The Ringer"> The Ringer</a>, <a href="http://www.theathletic.com" title="The Athletic">The Athletic</a>, and <a href="http://www.barstoolsports.com" title="Barstool Sports">Barstool Sports</a>, you'll notice their influences throughout the site because these are the writers and personalities that I personally follow.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">Also, the inspiration for the sidenotes stems from my fascination of <a href="https://www.grantland.com" title="Grantland">Grantland</a>&#8212;which regularly used sidenotes throughout all of its posts. (RIP, Grantland)</span></p>
 
 				<p>Currently, I'm a management consultant at Accenture and will be starting at UCLA Anderson this August, pursuing my MBA. This is the second paragrpah<label for="sn-social-reading" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-social-reading" class="margin-toggle"/><span class="sidenote" style="font-family: 'Open Sans',sans-serif; font-weight:300;">Yes, Kindle changed the way we read books and then… stopped there. I want social highlights, notes, flash cards, and fractal reading (each chapter summarized in 1 paragraph, expandable on several levels if you want to dig deeper)<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8212;&nbsp;Florent Crivello <a href="https://twitter.com/Altimor/status/1003408586553294856">@Altimor</a></span> alongside people we respect.</p>
 
