--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- END: Nav -->
 <!-- BEGIN: Image -->
       <section class="change-width" style="background-color:inherit; height:150px; padding-top: 5px; padding-bottom: 5px; border-bottom-style: solid; border-bottom-width:.1rem; border-bottom-color: #262626;">
-        <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="./index.html" title="Matt Coleman">
+        <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="./index" title="Matt Coleman">
           <img style="display:flex; justify-content:center; max-height:150px; max-width:150px;" src="./images/matt_coleman.jpg" alt="mattcoleman.net">
         </a>
       </section>
@@ -77,7 +77,7 @@
                <label for="mce-EMAIL" style="justify-content: center; display:flex; margin:0px; font-size: 14px; font-weight: 600;">Want to receive Matt's newsletter?</label>
               </span>
               <span style="justify-content: center; display:flex; padding-top:.5rem; padding-bottom:.75rem;">
-               <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email address" required style="width:250px; text-align:center; background-color:#F5F5F5; padding-bottom: 5px; border: none; border-bottom: solid 1px #262626">
+               <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email address" required style="width:250px; text-align:center; background-color:#F5F5F5; padding-bottom: 5px; border-top: none; border-left: none; border-right: none; border-bottom: solid 1px #262626; border-radius: 0px; box-shadow:none;">
               </span>
               <span style="justify-content: center; display:flex;">
                 <button id="submit-button" value="Subscribe" id="mc-embedded-subscribe" type="submit">Subscribe</button>
