--- a/follow.html
+++ b/follow.html
@@ -18,16 +18,16 @@
       <div style="background-color: inherit; padding-top:5px; padding-bottom:5px; justify-content:left; display:block; font-family:'Open Sans', sans-serif; font-size: 14px;">
         <ul style="display:flex;padding:0px; font-size:14px;margin:0px;">
           <li style="display:block; margin-top: 0px; flex:1;"><a href="./index.html" style="background-repeat:no-repeat; font-weight:500; text-shadow:none;">mattcoleman.net</a></li>
-          <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index.html">Home</a></li>
-          <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./follow.html">Follow</a></li>
-          <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./about.html">About</a></li>
+          <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index">Home</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./follow">Follow</a></li>
+          <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./about">About</a></li>
         </ul>
       </div>
     </section>
     <!-- END: Nav -->
     <!-- BEGIN: Image -->
       <section class="change-width" style="margin-top: 125px; background-color:inherit; height:125px; padding:0px;">
-        <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="./index.html" title="Matt Coleman">
+        <a style="display:flex; justify-content:center; background-repeat:no-repeat" href="./index" title="Matt Coleman">
           <img style="display:flex; justify-content:center; max-height:125px; max-width:125px;" src="./images/matt_coleman.jpg" alt="mattcoleman.net">
         </a>
       </section>
